Update messages_nl.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_nl.properties
+++ b/src/main/resources/i18n/messages_nl.properties
@@ -769,3 +769,74 @@ gamePath.select.noValidExe = De opgegeven locatie bevat geen geldige Supreme Com
 gamePath.select.vanillaGameSelected = De opgegeven locatie is een vanille-installatie, je dient de extensie Supreme Commander Forged Alliance te selecteren.
 gamePath.select.fafDataSelected = De opgegeven locatie is de Forged Alliance Forever game data directory, selecteer in plaats daarvan de Forged Alliance installatie.
 gamePath.select.error = Er ging iets mis tijdens het selecteren van het game pad
+main.news = Nieuws
+game.create.generatedMapNew = Nieuw
+game.create.defaultGameTypeMarker = Standaard
+settings.general.startTab = Start tabblad
+startTab.selectTab = Selecteer het tabblad om te starten bij\:
+startTab.message = Hier kun je selecteren in welk tabblad je client start. Je kan dit altijd later wijzigen, indien nodig.
+startTab.title = Selecteer start tabblad
+startTab.save = Bewaar
+startTab.wantToConfigure = Selecteer het tabblad om 
+startTab.configure = Configureer
+vault.replays.onlyShowLastYear = Alleen van het laatste jaar
+game.create.spawnCount = Hoeveelheid spawns
+game.create.mapSize = Map grootte
+game.generate = Maak een nieuwe map
+game.generate.recreate = Maak een map opnieuw met het gebruik van de volgende map naam
+game.generate.generateNew = Maak een nieuwe map met gebruik van de volgende opties
+game.generate.dialog = Opties voor kaartgenerator
+game.generate.generatedName = Map naam
+game.generate.generatedMapNew = NIEUW
+game.generate.waterSlider = Water
+game.generate.plateauSlider = Plateau
+game.generate.mountainSlider = Bergen
+game.generate.random = Willekeurig
+game.generate.none = Geen
+game.generate.lots = Veel
+mapGenerator.tooOldVersion = De versie van deze kaartgenerator word niet meer ondersteund
+mod.manager.uiMods = UI
+mod.manager.simMods = SIM
+mod.manager.deselectAll = Deselecteer alle mods
+mod.manager.reload = Herladen
+mod.manager.simModsTooltip = SIM modificaties zijn modificaties die het spel aanpast voor alle spelers.
+mod.manager.uiModsTooltip = UI modificaties zijn modificaties hoe jij het spel ziet.
+modVault.modManager = Manage actieve modificaties.
+modVault.manageMods = Manage actieve modificaties
+vault.loading = Laden...
+vault.searchError = Een probleem heeft zich voorgedaan tijdens het zoeken.
+vault.upload = Uploaden...
+replay.team = Team {0}
+replay.noTeam = Geen teams
+game.generateMap = Maak een nieuwe map
+game.generateMap.dialog = Kaartgenerator Opties.
+game.generateMap.generatedName = Map naam
+game.generateMap.waterSlider = Water
+game.generateMap.plateauSlider = Plateau
+game.generateMap.mountainSlider = Bergen
+game.generateMap.random = Willekeurig
+game.generateMap.none = Geen
+game.generateMap.lots = Veel
+settings.appearance.backgroundImage = Achtergrond
+settings.chat.chatFormat.description = Zal alleen toegepast worden op nieuwe berichten.
+settings.chat.hideFoe.description = Verberg chat berichten die verzonden zijn door spelers gemarkeerd als vijand.
+settings.chat.autoJoinChannels = Automatisch-Meedoen Kanalen.
+settings.notifications.position = Notificatie Positie
+settings.fa.autoDownloadMaps.description = Het automatisch downloaden van missende kaarten.
+settings.general.disallowDiscordJoins = Niet toestaan meedoen via Discord.
+settings.general.advancedIceLog = Schrijf ICE Log bestand
+mapVault.install = Installeer
+userInfo.ratingHistory.lastYear = Vorig Jaar.
+userInfo.ratingHistory.lastMonth = Laatste maand
+game.reasonNotValid.desync = Te Veel Desynchronisaties
+game.reasonNotValid.wrongCondition = Verkeerde Overwinning Conditie.
+game.reasonNotValid.cheats = Cheats Toestaan.
+game.reasonNotValid.short = Spel te Kort
+game.reasonNotValid.coop = Coöperatief Spel
+game.reasonNotValid.ffa = Ieder voor zich
+game.reasonNotValid.unevenTeams = Niet-gelijke Teams.
+game.reasonNotValid.unknown = Onbekend Resultaat
+game.reasonNotValid.difficulty = Verkeerde Moeilijkheid
+game.reasonNotValid.expansion = Uitbreiding Uitgeschakeld
+game.reasonNotValid.other = Anders
+exitWarning.title = Waarschuwing
