Update messages_fr.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -35,7 +35,7 @@ menu.revealModFolder = Parcourir les mods
 main.community.news = Actualités
 main.chat = Chat
 main.play = Jouer
-main.vault = Vault
+main.vault = Ressources
 main.units = Unités
 main.leaderboards = Classements
 leaderboard.ranked1v1 = Niveau 1c1
@@ -294,11 +294,11 @@ modVault.upload.compressing = Compression du mod…
 mapVault.upload.title = Envoyer une carte
 mapVault.upload.hint = Les valeurs sont obtenues depuis " *_scenario.lua "
 mapVault.upload.mapVersion = Version
-mapVault.upload.reading = Vérification de la carteu2026
-mapVault.upload = Envoyer la carteu2026
+mapVault.upload.reading = Vérification de la carte
+mapVault.upload = Envoyer la carte
 mapVault.upload.uploadNow = Envoyer
-mapVault.upload.uploading = Envoi en coursu2026
-mapVault.upload.compressing = Compression en coursu2026
+mapVault.upload.uploading = Envoi en cours
+mapVault.upload.compressing = Compression en cours
 mapVault.upload.complete = Envoi terminé
 mapVault.upload.complete.hint = AVERTISSEMENT\: Le serveur ayant renommé les fichiers, il vous est fortement recommandé de supprimer votre carte de votre dossier "maps" et de l'installer à nouveau depuis le Vault.
 mapVault.upload.failed = Impossible d'envoyer la carte. Le serveur a renvoyé l'erreur suivante \:\n\n{0}
@@ -310,7 +310,7 @@ mapVault.upload.sizeFormat = {0,number,\#}km x {1,number,\#}km
 mapVault.upload.playersFormat = {0,number,\#}
 mapVault.upload.rankedConfirm = Je confirme que cette carte est correctement équilibrée et ne contient pas de code prohibé. Je suis conscient que de la violation de ces règles résultera un bannissement. Décocher cette case rend la map non-classée.
 mapVault.upload.retry = Réessayer
-mapVault.loadingMaps = Chargement de la carteu2026
+mapVault.loadingMaps = Chargement de la carte
 mapVault.mostLikedMaps = Meilleure note
 mapVault.newestMaps = Plus récente
 mapVault.mostPlayed = Plus jouée
@@ -318,7 +318,7 @@ mapVault.installButtonFormat = Installer  ({0})
 mapVault.uninstall = Désinstaller
 mod.description = Description
 mod.comments = Commentaires
-map.author = Conception
+map.author = Auteur
 # Création anonyme (anonymous creation) instead of Auteur.e Inconnu.e (unknown author) to avoid median point that may hurt reactionaries
 map.unknownAuthor = Création anonyme
 map.name = Nom
@@ -339,9 +339,9 @@ map.updatedDateTime = Mise à jour le
 mapPreview.name = Nom \: {0}
 mapPreview.size = {0,number,\#} x {1,number,\#}
 mapPreview.loadFailure.message = Impossible de charger la prévisualisation
-replays.loadingOnlineTask.title = Chargement des rediffusions en ligneu2026
+replays.loadingOnlineTask.title = Chargement des rediffusions en ligne
 replays.loadingOnlineTask.failed = Impossible de charger les rediffusions en ligne.
-replays.loadingLocalTask.title = Chargement des rediffusions localesu2026
+replays.loadingLocalTask.title = Chargement des rediffusions locales
 replays.loadingLocalTask.failed = Impossible de charger les rediffusions locales.
 replays.live.loadFailure.title = Impossible de charger les parties en cours.
 replays.live.loadFailure.message = Échec de la connexion à la partie
@@ -349,7 +349,7 @@ tutorial.map = Carte
 tutorial.title = Titre
 tutorial.length = Durée
 tutorial.description = Description
-chat.connecting.message = Connexion au chatu2026
+chat.connecting.message = Connexion au chat
 updater.binary.taskTitle = Préparation des fichiers du jeu
 clientUpdateAvailable.notification = La version {0} du client est disponible ({1})
 clientUpdateAvailable.downloadAndInstall = Télécharger
@@ -364,7 +364,7 @@ mapReplayTask.title = Téléchargement de la rediff. {0}
 downloadingModTask.downloading = Téléchargement du mod {0}
 downloadingModTask.unzipping = Décompression du mod vers {0}
 missingGamePath.notification = Impossible de localiser le dossier du jeu
-missingGamePath.locate = Parcouriru2026
+missingGamePath.locate = Parcourir
 missingGamePath.chooserTitle = Localiser le dossier "Supreme Commander - Forged Alliance"
 notifications.empty = Aucune nouvelle notification
 stats.air = Air
@@ -398,7 +398,7 @@ user.status.waiting = En attente \: {0}
 user.status.playing = En jeu \: {0}
 achievement.stepsFormat = {0,number,\#}/{1,number,\#}
 achievements.mostRecent = Plus récent
-achievements.loading = Chargement des succèsu2026
+achievements.loading = Chargement des succès
 achievements.unlocked = Débloqué ({0,number,\#})
 # what does "open" mean in this context ?
 achievements.locked = Verrouillé ({0,number,\#})
@@ -443,11 +443,10 @@ settings.chat = Chat
 # Fuzzy
 settings.chat.maxMessages = Taille de l'historique du chat
 settings.chat.previews = Prévisualisation
-# Fuzzy
-settings.chat.previewImages = Afficher le lien des images lors du survol de la souris
+settings.chat.previewImages = Prévisualisation de l'URL des images
 settings.chat.colors = Couleurs
 # Fuzzy
-settings.chat.timeFormat = Format du temps
+settings.chat.timeFormat = Choix du système horaire
 settings.chat.colorMode.default = Défaut \: Couleurs par défaut pour tous les utilisateurs
 settings.chat.colorMode.custom = Personnalisé \: Couleurs personnalisées pour certains utilisateurs
 settings.chat.colorMode.random = Aléatoire \: Chaque utilisateur a une couleur aléatoire spécifique.
@@ -478,7 +477,7 @@ settings.fa.executableDecorator = Ligne de commande personnalisée
 settings.fa.executionDirectory = Dossier d'exécution
 settings.fa.advanced = Avancé
 settings.fa.useDefault = Utiliser le répertoire par défaut
-settings.fa.chooseDirectory = Parcouriru2026
+settings.fa.chooseDirectory = Parcourir
 settings.general.theme = Thème
 settings.notifications.friendOnline = Ami connecté
 settings.notifications.friendJoinsGame = Ami rejoins une partie
@@ -510,10 +509,10 @@ friend.joinedGameNotification.title = {0} a rejoint {1}
 friend.joinedGameNotification.action = Rejoindre la même partie
 query.equals = est
 query.notEquals = n'est pas
-query.greaterThan = plus grand que
-query.greaterThanEquals = plus ou grand ou égal à
-query.lessThan = inférieur à
-query.lessThanEquals = inférieur ou égal à
+query.greaterThan = est supérieur à
+query.greaterThanEquals = est supérieur ou égal à
+query.lessThan = est inférieur à
+query.lessThanEquals = est inférieur ou égal à
 query.in = contenu dans
 query.notIn = absent de
 query.and = et
@@ -564,7 +563,7 @@ userInfo.nameHistory.errorLoading = Impossible de charger les alias
 settings.chat.notifyOnAtMentionOnly = Notifier uniquement lors d'une mention @
 settings.chat.notifications = Notifications
 mod.displayName = Nom
-mod.author = Conception
+mod.author = Auteur
 mod.uploadedDateTime = Envoyé
 mod.updatedDateTime = Mis à jour
 mod.id = ID
@@ -788,10 +787,28 @@ main.news = Nouveautés
 game.create.generatedMapNew = NOUVEAU
 game.create.defaultGameTypeMarker = (default)
 # Fuzzy
-settings.general.startTab = Sélectionnez l'onglet à partir duquel
+settings.general.startTab = Page d'accueil
 startTab.selectTab = Sélectionnez l'onglet pour commencer\:
 startTab.message = Ici, vous pouvez sélectionner l'onglet dans lequel votre client démarre. Vous pourrez le modifier plus tard dans les paramètres si vous le souhaitez
 startTab.title = Sélectionnez l'onglet de démarrage
 startTab.save = Sauvegarder
 startTab.wantToConfigure = Sélectionnez l'onglet pour commencer\:
 startTab.configure = Configurer
+vault.replays.onlyShowLastYear = L'an passé uniquement
+mapGenerator.tooNewVersion = Ce client est incompatible avec cette version du générateur de carte. Veuillez mettre à jour le client pour utiliser cette version.
+mapGenerator.tooOldVersion = Cette version du générateur de carte n'est plus compatible.
+# Fuzzy
+settings.checkForPrerelease.description = Lors de la recherche de mises à jour, vérifier aussi les prereleases
+settings.chat.previewImages.description = Afficher l'adresse URL de l'image au passage de la souris
+settings.chat.timeFormat.description = Choix du système horaire du chat \: 12h ou 24h
+settings.chat.hideFoe.description = Cacher les messages de chat envoyés par les joueurs que vous avez désignés en tant qu'ennemis
+settings.chat.autoJoinChannels = Liste des canaux à connexion automatique
+settings.chat.autoJoinChannels.description = Canaux de chat à rejoindre automatiquement en plus de ceux spécifiés par le serveur
+settings.notifications.enableNotifications.description = Active/Désactive toutes les notifications visuelles.
+settings.notifications.position = Emplacement des notifications
+settings.sounds.enable.description = Active/Désactive tous les sons.
+settings.chat.notifyOnAtMentionOnly.description = Notifier dans le chat uniquement si on vous mentionne en utilisant {0}
+settings.general.vaultFallbackLocation = Dépôt de secours
+settings.general.vaultFallbackLocation.description = Cochez ceci si le téléchargement de cartes ou mods est problématique
+settings.general.advancedIceLog = Écrire un fichier de logs pour ICE
+settings.general.advancedIceLog.description = Écrit des informations sur l'adaptateur ICE dans un fichier de logs supplémentaire
