Update messages_de.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -792,5 +792,26 @@ game.create.defaultGameTypeMarker = (Voreinstellung)
 settings.general.startTab = Starter "Tab"
 startTab.selectTab = Wählen Sie den "Tab", mit dem Sie beginnen möchten\:
 startTab.message = Hier können Sie den "Tab" auswählen, mit dem der Client startet. Sie können dies später in den Einstellungen ändern, wenn Sie möchten.
+startTab.title = Wähle ein Tab zum Starten
 startTab.save = Speichern
 vault.replays.onlyShowLastYear = Nur ein Jahr alte
+game.create.spawnCount = Anzahl Spieler
+game.create.mapSize = Kartengröße
+game.generate.generatedMapNew = NEU
+game.generate.waterSlider = Wasser
+game.generate.mountainSlider = Berge
+game.generate.rampSlider = Rampen
+game.generate.random = Zufällig
+game.generate.none = Keine
+game.generate.lots = Viele
+mod.manager.uiMods = UI
+mod.manager.simMods = SIM
+mod.manager.deselectAll = Alle mods deaktivieren
+mod.manager.reload = Neu laden
+mod.manager.simModsTooltip = SIM mods beeinflussen das Spiel für alle Spieler.
+mod.manager.uiModsTooltip = UI mods beeinflussen nur deine Sichtweise auf das Spiel.
+modVault.modManager = Verwalte aktivierte mods
+modVault.manageMods = Verwalte aktivierte mods
+game.generateMap.random = Zufällig
+game.generateMap.none = Keine
+game.generateMap.lots = Viele
