Update messages_it.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_it.properties
+++ b/src/main/resources/i18n/messages_it.properties
@@ -850,6 +850,7 @@ settings.fa.executionDirectory.description = In quale cartella l'eseguibile del 
 settings.chat.notifyOnAtMentionOnly.description = Ricevi soltanto notifiche in chat se qualcuno ti menziona usando {0}.
 settings.general.unitDatabase.description = La comunità ha implementato molteplici database di unità, che sono denominati dai creatori. Scegli quello da usare nel database di unità.
 settings.general.disallowDiscordJoins = Disabilita ingresso tramite Discord
+# Fuzzy
 settings.general.disallowDiscordJoins.description = Non permettere ad altri giocatori di entrare nella partita tramite Discord Rich Presence.
 settings.general.vaultFallbackLocation = Posizione di backup del Vault
 settings.general.vaultFallbackLocation.description = Usa questo se il download di mappe/mod ha problemi ed il gioco non trova le mappe/mod.
@@ -865,3 +866,43 @@ vault.replays.copyReplayPath = Copia Path Replay
 game.generateMap.less = Meno
 game.generateMap.more = Più
 discord.join = Unisciti a FAF su Discord
+game.reasonNotValid = 
+game.reasonNotValid.desync = 
+game.reasonNotValid.wrongCondition = 
+game.reasonNotValid.fogOfWar = 
+game.reasonNotValid.cheats = 
+game.reasonNotValid.prebuilt = 
+game.reasonNotValid.noRush = 
+game.reasonNotValid.unitRestriction = 
+game.reasonNotValid.unrankedMap = 
+game.reasonNotValid.short = 
+game.reasonNotValid.unrankedMod = 
+game.reasonNotValid.coop = 
+game.reasonNotValid.draw = 
+game.reasonNotValid.singlePlayer = 
+game.reasonNotValid.ffa = 
+game.reasonNotValid.unevenTeams = 
+game.reasonNotValid.unknown = 
+game.reasonNotValid.teamsUnlocked = 
+game.reasonNotValid.multipleTeams = 
+game.reasonNotValid.ai = 
+game.reasonNotValid.civiliansRevealed = 
+game.reasonNotValid.difficulty = 
+game.reasonNotValid.expansion = 
+game.reasonNotValid.spawn = 
+game.reasonNotValid.other = 
+game.valid = 
+exitWarning.title = 
+exitWarning.message = 
+chat.userContext.broadcast = 
+corruptedModsError.notification = 
+settings.data = 
+settings.data.gameDataCache.time = 
+settings.data.gameDataCache.time.description = 
+settings.data.gameDataCache = 
+settings.data.gameDataCache.description = 
+settings.data.clearCache = 
+settings.data.clearCache.description = 
+settings.data.clearCache.button = 
+settings.general.cacheLifeTime = 
+games.create.enforceRating = 
