Update messages_es.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -671,3 +671,12 @@ game.couldNotJoin = No se pudo unir a la partida con el ID ''{0}''.
 discord.disallowJoins = No permitir a jugadores unirse a través de Discord
 # Fuzzy
 replay.couldNotOpen = La repetición con id ''{0}'', no se pudo abrir.
+view.showSidePane = Mostrar detalles
+view.hideSidePane = Esconder detalles
+menu.revealReplayFolder = Mostrar carpeta de repeticiones
+menu.revealGamePrefsFile = Mostrar archivo game.prefs
+ranked1v1.queuePopTimer = Emparejando en {0,number,0}\:{1,number,00}
+game.create.generatedMap = Genera un nuevo mapa
+game.avgRating.format = {0,number,\#}
+game.mapGeneration.notification.title = Generando mapa...
+game.mapGeneration.notification.message = Por favor espera. (Versión\: {0}, Semilla\: {1})
