Update messages_tr.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_tr.properties
+++ b/src/main/resources/i18n/messages_tr.properties
@@ -755,6 +755,7 @@ gamePath.select.fafDataSelected = Seçilmiş dizin Forged Alliance Forever oyun 
 gamePath.select.error = Oyun dizinini seçerken bir şeyler yanlış gitti
 main.news = Haberler
 game.create.generatedMapNew = YENİ
+game.create.defaultGameTypeMarker = (varsayılan)
 # Fuzzy
 settings.general.startTab = Başlangıç sekmesini seç
 startTab.selectTab = Başlangıç sekmesini seç
@@ -762,3 +763,8 @@ startTab.title = Başlangıç sekmesini seç
 startTab.save = Kaydet
 startTab.wantToConfigure = Başlangıç sekmesini seç\:
 startTab.configure = Yapılandır
+vault.replays.onlyShowLastYear = Yalnızca geçen yıldan
+game.create.mapSize = Harita büyüklüğü
+game.generate = Yeni harita oluştur
+game.generate.dialog = Harita oluşturucu seçenekleri
+game.generate.generatedName = Harita adı
