Update messages_uk.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_uk.properties
+++ b/src/main/resources/i18n/messages_uk.properties
@@ -214,6 +214,7 @@ game.duration = Тривалість гри
 game.gameType = Тип гри
 game.startTime = Час початку
 game.endTime = Час закінчення
+game.validity = Валідність
 game.victoryCondition = Умови для перемоги
 game.player.id = ID гравця
 game.player.faction = Фракція гравця
@@ -244,6 +245,7 @@ game.watchButtonFormat = Дивитись ({0})
 game.watchDelayedFormat = Спостерігач в\: {0}
 game.replayFileMissing = Файл повтору відсутній
 game.idFormat = \#{0,number,\#}
+game.lineUp = Склад
 featuredMod.displayName = Назва режиму
 featuredMod.technicalName = Коротка назва режиму
 ladder.searchPrompt = Шукати рейтинг або гравця
@@ -251,6 +253,7 @@ login.title = Вхід FA Forever
 login.password = Пароль
 login.autoLogin = Автоматичний вхід
 login.create = Створити профіль
+login.forgot = Забули логін
 login.button.login = Увійти
 login.button.cancel = Відмінити
 login.progress.message = Авторизація...
@@ -275,6 +278,7 @@ modVault.loadingMods = Завантаження модів...
 modVault.upload.chooseDirectory = Вибрати теку мода
 modVault.upload.hint = Значення зчитуються з mod_info.lua
 modVault.upload.modVersion = Версія
+modVault.upload.modUid = UID
 modVault.upload.uploadNow = Завантажити зараз
 modVault.upload.uploading = Йде завантаження моду...
 modVault.upload.complete = Завантаження заверешено
@@ -286,6 +290,7 @@ mapVault.upload.title = Завантажити мапу
 mapVault.upload.hint = Значення зчитуються з *_scenario.lua
 mapVault.upload.mapVersion = Версія
 mapVault.upload.reading = Зчитування мапи
+mapVault.upload.complete.hint = ВАЖЛИВО\: Оскільки сервер може перейменувати ваші файли, наполегливо рекомендуємо видалити дану карту з теки усіх карт і натомість встановити її зі сховища.
 mapVault.upload.failed = Неможливо завантажити мапу.Сервер доповів про наступні помилки\:\n\n{0}
 mapVault.upload.mapSize = Розмір
 mapVault.upload.sizeFormat = {0,number,\#}км x {1,number,\#}км
@@ -301,6 +306,9 @@ mapVault.uninstall = Видалити
 mod.description = Опис
 mod.comments = Коментарі
 map.author = Автор
+map.unknownAuthor = Невідомий автор
+map.name = Назва
+map.description = Опис
 map.ranked = Htqnb
 map.width = Ширина (в пікселях)
 map.height = Висота (в пікселях)
