Add Debug Logging Toggle

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -859,6 +859,9 @@ settings.general.vaultFallbackLocation=Vault Fallback Location
 settings.general.vaultFallbackLocation.description=Use this if map/mod downloading has issues and the game does not find maps/mods.
 settings.general.advancedIceLog=Write ICE Log File
 settings.general.advancedIceLog.description=Write information about the ICE adapter into an additional log file.
+settings.general.debugLog=Enable DEBUG logging
+settings.general.debugLog.description=Increase the log level to DEBUG for troubleshooting.
+settings.general.debugLog.button=Start
 help.title=Links Overview
 # Even tho shown as not used the following messages are used
 linksRules=Rules
