Implement a filter for country in the chat window
Implemented a filter for country in the chat window.
Implemented country filter using a TextField instead of ComboBox
Fixes #1978

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -834,4 +834,5 @@ modVault.manageMods=Manage active mods
 theme.needsRestart.message=Changing the theme to ''{0}'' might require a restart.
 theme.needsRestart.quit=Quit
 discord.join=Join FAF on Discord
+chat.filter.countryPrompt=Country code
 games.create.enforceRating=Enforce rating
