--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -42,7 +42,7 @@ main.leaderboards=Leaderboards
 main.tournaments=Tournaments
 leaderboard.ranked1v1=1v1 Rating
 leaderboard.global=Global Rating
-leaderboard.divisionName=In Placement
+leaderboard.divisionName=Diamond II
 play.teamMatchmaking=Matchmaking
 play.custom=Custom games
 play.ranked1v1=1v1 ranked match (deprecated)
