Add chat functionality WIP

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -189,6 +189,8 @@ chat.privateMessage.currentlyPlaying=Currently playing
 chat.privateMessage.game.players=Players
 chat.privateMessage.achievements.unlocked=Achievements unlocked
 chat.privateMessage.achievements.unlockedFormat={0,number,#}/{1,number,#}
+chat.groupChat.playerDisconnect={0} has disconnected
+chat.groupChat.playerConnect={0} has connected
 games.create=Create game
 games.create.minRating=Min.
 game.create.spawnCount=Number of spawns
