Update messages_nl.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_nl.properties
+++ b/src/main/resources/i18n/messages_nl.properties
@@ -786,14 +786,18 @@ game.generate = Maak een nieuwe map
 game.generate.recreate = Maak een map opnieuw met het gebruik van de volgende map naam
 game.generate.generateNew = Maak een nieuwe map met gebruik van de volgende opties
 game.generate.dialog = Opties voor kaartgenerator
+game.generate.nameCaution = Voer de naam in van een gemaakte kaart die je opnieuw wilt maken. De kaartnaam moet de indeling hebben van neroxis_map_generator_ (versie) _ (plek) _ (opties).
 game.generate.generatedName = Map naam
 game.generate.generatedMapNew = NIEUW
 game.generate.waterSlider = Water
 game.generate.plateauSlider = Plateau
 game.generate.mountainSlider = Bergen
+game.generate.rampSlider = Hellingen
 game.generate.random = Willekeurig
 game.generate.none = Geen
 game.generate.lots = Veel
+mapGenerator.invalidName = De kaartnaam is een niet gemaakte kaartnaam
+mapGenerator.tooNewVersion = Deze client ondersteunt deze versie van de kaartgenerator niet. Werk de client bij om deze versie te gebruiken.
 mapGenerator.tooOldVersion = De versie van deze kaartgenerator word niet meer ondersteund
 mod.manager.uiMods = UI
 mod.manager.simMods = SIM
@@ -803,21 +807,31 @@ mod.manager.simModsTooltip = SIM modificaties zijn modificaties die het spel aan
 mod.manager.uiModsTooltip = UI modificaties zijn modificaties hoe jij het spel ziet.
 modVault.modManager = Manage actieve modificaties.
 modVault.manageMods = Manage actieve modificaties
+theme.needsRestart.message = Het thema wijzigen in '' {0} '', kan een herstart geven.
+theme.needsRestart.quit = Verlaat
 vault.loading = Laden...
+vault.displayQuery = Toon de zoekopdracht.
+vault.queryPrompt = Maak een zoekopdracht aan of voer een opdracht zelf in
 vault.searchError = Een probleem heeft zich voorgedaan tijdens het zoeken.
 vault.upload = Uploaden...
 replay.team = Team {0}
 replay.noTeam = Geen teams
+search.perPage = Items per Pagina
 game.generateMap = Maak een nieuwe map
+game.generateMap.recreate = Maak de kaart opnieuw met de volgende map naam\:
+game.generateMap.generateNew = Maak een nieuwe kaart met behulp van de volgende opties\:
 game.generateMap.dialog = Kaartgenerator Opties.
+game.generateMap.nameCaution = Voer de naam in van een gemaakte kaart die je opnieuw wilt maken. De kaartnaam moet de indeling hebben van neroxis_map_generator_ (versie) _ (plek) _ (opties).
 game.generateMap.generatedName = Map naam
 game.generateMap.waterSlider = Water
 game.generateMap.plateauSlider = Plateau
 game.generateMap.mountainSlider = Bergen
+game.generateMap.rampSlider = Hellingen
 game.generateMap.random = Willekeurig
 game.generateMap.none = Geen
 game.generateMap.lots = Veel
 settings.appearance.backgroundImage = Achtergrond
+settings.appearance.backgroundImage.description = Een achtergrond instellen zal meer geheugen gebruiken.
 settings.chat.chatFormat.description = Zal alleen toegepast worden op nieuwe berichten.
 settings.chat.hideFoe.description = Verberg chat berichten die verzonden zijn door spelers gemarkeerd als vijand.
 settings.chat.autoJoinChannels = Automatisch-Meedoen Kanalen.
@@ -828,14 +842,20 @@ settings.general.advancedIceLog = Schrijf ICE Log bestand
 mapVault.install = Installeer
 userInfo.ratingHistory.lastYear = Vorig Jaar.
 userInfo.ratingHistory.lastMonth = Laatste maand
+game.generateMap.less = Minder
+game.generateMap.more = Meer
+discord.join = Doe mee met FAF op Discord
 game.reasonNotValid.desync = Te Veel Desynchronisaties
 game.reasonNotValid.wrongCondition = Verkeerde Overwinning Conditie.
+game.reasonNotValid.fogOfWar = Geen Mist van Oorlog
 game.reasonNotValid.cheats = Cheats Toestaan.
+game.reasonNotValid.noRush = Haast Niet Ingeschakeld
 game.reasonNotValid.short = Spel te Kort
 game.reasonNotValid.coop = Coöperatief Spel
 game.reasonNotValid.ffa = Ieder voor zich
 game.reasonNotValid.unevenTeams = Niet-gelijke Teams.
 game.reasonNotValid.unknown = Onbekend Resultaat
+game.reasonNotValid.multipleTeams = Meerdere Teams
 game.reasonNotValid.difficulty = Verkeerde Moeilijkheid
 game.reasonNotValid.expansion = Uitbreiding Uitgeschakeld
 game.reasonNotValid.other = Anders
