Update messages_fr.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -808,7 +808,57 @@ settings.notifications.enableNotifications.description = Active/Désactive toute
 settings.notifications.position = Emplacement des notifications
 settings.sounds.enable.description = Active/Désactive tous les sons.
 settings.chat.notifyOnAtMentionOnly.description = Notifier dans le chat uniquement si on vous mentionne en utilisant {0}
-settings.general.vaultFallbackLocation = Dépôt de secours
+settings.general.vaultFallbackLocation = Emplacement du dépôt de secours
 settings.general.vaultFallbackLocation.description = Cochez ceci si le téléchargement de cartes ou mods est problématique
 settings.general.advancedIceLog = Écrire un fichier de logs pour ICE
 settings.general.advancedIceLog.description = Écrit des informations sur l'adaptateur ICE dans un fichier de logs supplémentaire
+mapVault.install = Installer
+chat.userContext.report = Signaler un joueur
+userInfo.ratingHistory.allTime = Tout le temps
+userInfo.ratingHistory.lastYear = L'année dernière
+userInfo.ratingHistory.lastMonth = Le mois dernier
+vault.replays.copyReplayId = Copier l'ID d'enregistrement
+vault.replays.copyReplayPath = Copier l'emplacement de l'enregistrement
+game.generateMap.less = Moins
+game.generateMap.more = Plus
+discord.join = Rejoindre FAF sur Discord
+game.reasonNotValid = La partie n'a pas été cotée. Raison\: {0}
+game.reasonNotValid.desync = Trop de désynchronisations
+game.reasonNotValid.wrongCondition = Conditions de victoire incorrectes
+game.reasonNotValid.fogOfWar = Pas de brouillard de guerre
+game.reasonNotValid.cheats = Codes de triche activés
+game.reasonNotValid.prebuilt = Pré-construction activée
+# There is not really a translation for Rush in the way it's meant in a game. And everyone knows what it means ^^'
+# It's even called rush in the French base game.
+game.reasonNotValid.noRush = No-Rush activé
+game.reasonNotValid.unitRestriction = Restriction d'unités
+game.reasonNotValid.unrankedMap = Map non-classée
+game.reasonNotValid.short = Partie trop courte
+game.reasonNotValid.unrankedMod = Mod non-classé
+game.reasonNotValid.coop = Partie coopérative
+game.reasonNotValid.draw = Match nul
+game.reasonNotValid.singlePlayer = Joueur individuel
+game.reasonNotValid.ffa = CPS
+game.reasonNotValid.unevenTeams = Équipes inégales
+game.reasonNotValid.unknown = Résultat inconnu
+game.reasonNotValid.teamsUnlocked = Équipes débloquées
+game.reasonNotValid.multipleTeams = Équipes multiples
+game.reasonNotValid.ai = IA Présente
+game.reasonNotValid.civiliansRevealed = Civils révélés
+game.reasonNotValid.difficulty = Difficulté incorrecte
+game.reasonNotValid.expansion = Expansion désactivée
+game.reasonNotValid.spawn = Insertion non-figée
+game.reasonNotValid.other = Autre
+exitWarning.title = Avertissement
+exitWarning.message = Forged Alliance est toujours en cours d'utilisation, êtes-vous sûr de vouloir fermer le client ?
+chat.userContext.broadcast = Diffusion de message...
+corruptedModsError.notification = Une erreur inattendue a empêché le client de charger le mod suivant\: {0}
+settings.data = Données et cache
+settings.data.gameDataCache.time = Validité des données de jeu en cache en jours.
+settings.data.gameDataCache.time.description = Définis la durée pendant laquelle les fichiers de jeu sont gardés en cache. Régler sur une longue durée pour réduire les téléchargements. Régler sur une courte durée pour préserver l'espace disque.
+settings.data.gameDataCache = Cache des données de jeu
+settings.data.gameDataCache.description = Mettre les données de jeu en cache pour les versions non-utilisées. Réduit significativement le nombre de fichier téléchargés, particulièrement lors du visionnage d'anciens enregistrements.
+settings.data.clearCache = Vider le cache
+settings.data.clearCache.description = Pas encore implémenté. Aidez-nous a créer ce bouton.
+settings.data.clearCache.button = Vider les caches
+settings.general.cacheLifeTime = Fichier gardés en cache pour (en jour)\:
