#1400 implement displaying tooltip about game info (#2010)
Co-authored-by: Ivan <v23620@gmail.com>

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -230,6 +230,7 @@ game.full.action=Click to open game
 game.mods.twoAndMore={0} and {1,number,#} more
 game.gameStatus=Game status
 game.gameStatus.playing=Playing
+game.gameStatus.hosting=Hosting
 game.gameStatus.lobby=Waiting for game to start
 game.gameStatus.none=None
 game.id=Replay ID
