Add option to color users by group

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -551,8 +551,7 @@ settings.chat.chatFormat=Chat Format
 settings.chat.chatFormat.description=Will only be applied to new messages.
 settings.chat.chatFormat.extended=Extended
 settings.chat.chatFormat.compact=Compact
-settings.chat.colorMode.default=Default: Use default colors for all users
-settings.chat.colorMode.custom=Custom: Allow custom colors for specific users
+settings.chat.colorMode.default=Default: Allow custom colors for specific users and categories
 settings.chat.colorMode.random=Random: Every user has an unique, random color
 settings.chat.foes=Foes
 settings.chat.hideFoe=Hide Foe Messages
