--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -847,3 +847,4 @@ theme.needsRestart.quit=Quit
 discord.join=Join FAF on Discord
 chat.filter.countryPrompt=Country code
 games.create.enforceRating=Enforce rating
+label.copy=copy
