Make mod names 2 and More

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -227,7 +227,7 @@ game.join.passwordWrong=Incorrect password
 game.start.couldNotStart=The game could not be started. See error details below.
 game.full=Game is full
 game.full.action=Click to open game
-game.mods.twoAndMore={0} and {1,number,#} more
+game.mods.twoAndMore={0}, {1} and {2,number,#} more
 game.gameStatus=Game status
 game.gameStatus.playing=Playing
 game.gameStatus.hosting=Hosting
