Add label context menu (#2031)

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -667,6 +667,7 @@ mod.uploader.login=Uploader
 mod.uploadedDateTime=Uploaded
 mod.updatedDateTime=Updated
 mod.id=ID
+mod.idNumber=#{0}
 mod.uid=UID
 mod.type=Typ
 mod.ranked=Ranked
@@ -847,3 +848,4 @@ theme.needsRestart.quit=Quit
 discord.join=Join FAF on Discord
 chat.filter.countryPrompt=Country code
 games.create.enforceRating=Enforce rating
+label.copy=copy
