Correct generation type tooltip

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -159,6 +159,7 @@ chat.privateMessage.achievements.unlocked=Achievements unlocked
 chat.privateMessage.achievements.unlockedFormat={0,number,#}/{1,number,#}
 games.create=Create game
 games.create.minRating=Min.
+game.create.generationType=Type of generated map:\nCausal - Client and lobby preview generated.\nTournament - Forces all random, Client preview not generated and time stamp added to map description.\nBlind - Forces all random, Client and Lobby preview not generated and time stamp added to map description.
 game.create.spawnCount=Number of spawns
 game.create.mapSize=Map Size
 games.create.maxRating=Max.
