--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -71,8 +71,9 @@ teammatchmaking.leaveParty=Leave party
 teammatchmaking.invitePlayer=Invite players
 teammatchmaking.invite=Invite
 teammatchmaking.invitedPlayers=Invited players:
+teammatchmaking.mapPool=Maplist
 teammatchmaking.playersInQueue=In Queue: {0,number,#}
-teammatchmaking.queuePopTimer=Starting: {0,number,0}:{1,number,00}
+teammatchmaking.queuePopTimer=Matching in: {0,number,0}:{1,number,00}
 teammatchmaking.gameCount=Games played: {0,number,#}
 teammatchmaking.notification.invite.title=Invited to party
 teammatchmaking.notification.invite.message={0} has invited you to join their party
