Update messages_cat.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_cat.properties
+++ b/src/main/resources/i18n/messages_cat.properties
@@ -187,6 +187,7 @@ game.join.passwordWrong = Contrasenya incorrecta
 game.start.couldNotStart = La partida no s'ha pogut iniciar. Veure detalls de l'error a sota.
 game.full = La partida és plena
 game.full.action = Clica per a obrir partida
+# Fuzzy
 game.mods.twoAndMore = {0} i {1,number\#} més
 game.gameStatus = Estat de partida
 game.gameStatus.playing = Jugant
